argocd/budget/firefly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: budget
  name: actual
spec:
  selector:
    matchLabels:
      app: actual
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: actual
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: firefly-pvc
      volumes:
        - name: firefly-pvc
          persistentVolumeClaim:
            claimName: firefly-pvc
