argocd/budget/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: budget-svc
  namespace: budget
spec:
  selector:    
    app: actual
  type: LoadBalancer
  ports:  
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
